# httpcake

./: README.md  config.py  crud.py  httpcake.py  login.py  pyproject.toml
tests/: test_crud.py
tests/fixtures/: requests.json
