[tool.poetry]
name = "httpcake"
version = "0.1.0"
description = "A tool for testing API rest endpoints. Like Postman, but ugly (CLI)."
authors = ["qu4nt group"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


httpie = "^3.2.2"
python-dotenv = "^1.0.1"
[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"

isort = "^5.13.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
httpcake = "httpcake:cli"  # Entry point to the cli

